kubernetes/yamls/web/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-notls
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: openeventor.ga
    http:
      paths:
      - path: /
        backend:
          serviceName: api-server
          servicePort: 8080
