kubernetes/yamls/web/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - openeventor.ga
    secretName: eventyay-api-tls
  rules:
  - host: openeventor.ga
    http:
      paths:
      - path: /
        backend:
          serviceName: api-server
          servicePort: 8080
